# omega

./: ALTATalk.md  AutoLevelled.md  Auxillary.hs  Bind.hs  CallingConventions.md  CascadedData.md  Checkers.org  ClassPropositions.md  Commands.hs  CommentDef.hs  CommentDefExample.hs  CompactInfinities.md  ConstructorConservation.md  ConstructorTheorems.md  Cooper.hs  DepthFirstSearch.hs  DiffLabel.prg  Encoding2.hs  Epiphany.md  FinallyTagless.md  FunctionGADTs.md  Glossary.md  HomologyTypes.md  IcebergTypes.md  InductionPrinciples.md  Infer.hs  Infer2.hs  IntensionalApplication.md  LICENSE.txt  LambdaGraph.md  LangEval.hs  LangPrelude.prg  Main.hs  Makefile  Manual.hs  ModalLogic.md  Monads.hs  Narrow.hs  NarrowData.hs  NarrowMod.hs  (+32 more)
doc/: EqualProofsByInduction.prg  OmegaManual.tex  final.bib
mosaic/: AddType.hs  ApplyRewriter.lhs  AtkeyScript.hs  AtkeyScriptHOAS.hs  AtkeyScriptHOASType.hs  BoundedCombinators.lhs  BoundedParser.lhs  CircularFinal.hs  CircularFinalWithTypes.hs  CloudAtlas.hs  CocoaHeads.lhs  DegreePlugin.hs  ForallConstructor.hs  GuardedFib.hs  HoleTree.hs  HuttonBahr.hs  Iceberg.hs  IndexedMonad.hs  InhabitantTH.hs  Inhabitants.hs  LambdaBuilder.hs  LevelledParser.hs  OmegaParser.hs  OmegaQuote.hs  ParseThrist.lhs  Rank2-FD.hs  TokenDef.hs  TwoHoles.hs  TyEqGen.hs  TypeMachinery.kinds.lhs  TypeMachinery.lhs  Unify-Monoid.lhs  Unify.lhs  conservative.hs  def-use.hs  finally-datatype.hs  finally-finally.hs  finally-infer.hs  finally-layout.hs  finally-llvm.hs  (+4 more)
src/: Auxillary.hs  Bind.hs  Commands.hs  CommentDef.hs  Cooper.hs  Encoding.hs  Encoding2.hs  GenLLVM.hs  Infer.hs  Infer2.hs  InferLLVM.hs  LangEval.hs  Main.hs  Makefile  Manual.hs  Monads.hs  Narrow.hs  NarrowData.hs  ParseExpr.hs  ParseToken.hs  Parser.hs  ParserAll.hs  ParserDef.hs  Parsing.prg  PrimParser.hs  RankN.hs  Syntax.hs  SyntaxExt.hs  TokenDef.hs  Toplevel.hs  Value.hs  Version.hs  work.prg
tests/: Covert.prg  DigitList.prg  Explicit.prg  FinalGenExamples.prg  FiniteDomLang.prg  Graft.prg  Iceberg.prg  IntegralOrder.prg  Inventory.prg  ItemNotation.prg  LabeledDeBruijn.prg  LeftList.prg  LeftWay.prg  LevelFunction.prg  Lockstep.prg  Matt'sSet.prg  MetaTree.prg  NBE_lambda2.prg  NamesForFree.prg  Nat.prg  (+21 more)
trunk/util/: BuildDistr.hs  BuildSpecific.hs  buildMain.txt  omega.cabal
util/: BuildDistr.hs  BuildSpecific.hs  buildMain.txt  omega.cabal
(+680 files in other folders)
