Name:                omega
Version:             1.5.1
Description:         A purely functional programming language and a proof system
Category:            ddd
Synopsis:            dfdfdf
License:             BSD3
License-file:        LICENSE.txt
Author:              Tim Sheard, his students and heisenbug
Maintainer:          ggreif@gmail.com
Homepage:            http://code.google.com/p/omega/
Bug-Reports:         http://code.google.com/p/omega/issues/
Build-Type:          Simple
Cabal-Version:       >= 1.6
Tested-With:         GHC == 7.0.3

--Source-Repository    head
--  type:     svn
--  location: http://omega.googlecode.com/svn/trunk/
Source-Repository    this
  type:     svn 
  location: http://omega.googlecode.com/svn/tags/omega-1.5.1/
  tag:      omega-1.5.1

Executable omega
  HS-Source-Dirs:    .
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5, directory, filepath,
                     old-time, haskell98, pretty, array,
                     containers
  Extensions:        GADTs

