Name:                omega
Version:             1.5.1
Description:         A purely functional programming language and a proof system
License:             BSD3
License-file:        LICENSE.txt
Author:              Tim Sheard, his students and heisenbug
Maintainer:          ggreif@gmail.com
Homepage:            http://code.google.com/p/omega/
Bug-Reports:         http://code.google.com/p/omega/issues/
Build-Type:          Simple
Cabal-Version:       >=1.2
Tested-With:         GHC == 7.0.3

Executable omega
  HS-Source-Dirs:    ../src
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5, directory, filepath,
                     old-time, haskell98, pretty, array,
                     containers
  Extensions:        GADTs

